<resources>
    <string name="app_name">FindMyBarber</string>
    <string name="facebook_app_id">157899575786908</string>
    <string name="fb_login_protocol_scheme">fb157899575786908</string>
    <string name="search_for_a_barber">Search for a barber</string>
    <string name="title_activity_registeration">Registeration</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="finish">Finish</string>
    <string name="this_is_req">This is required.</string>
    <string name="exist_acc">An account already exists with this email address.</string>
    <string name="sign_up_for_findmybarber">Sign up for FindMyBarber</string>
    <string name="illegal_name">Illegal first name</string>
    <string name="illegal_surname">Illegal last name</string>
    <string name="illegal_email">Illegal email</string>
    <string name="illegal_phone">Illegal phone number</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="find_my_barber_logo">Find my barber LOGO</string>
    <string name="KEY">AIzaSyDnxYQqW8sKbSxmlwSZHt6Shi_nGk5yUe4</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">test</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image">image</string>
    <string name="book_now">Book now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book">Book Now</string>
    <string name="close">close</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="timestring">Time:</string>
    <string name="datestring">Date:</string>
    <string name="please_select_a_date_from_the_calendar_to_view_your_next_meetings">Please Select a date from the calendar to view your scheduled meetings</string>
    <string name="please_select_meeting_to_view_details">Please Select meeting to view details:</string>
    <string name="click_below_to_change_the_date_and_time_for_the_meeting">Click below to change the date and time for the meeting</string>
    <string name="contact_details">Contact Details:</string>
    <string name="phone_number_title">Phone number:</string>
    <string name="contact_name_title">Contact name:</string>
    <string name="please_enter_client_email">Please enter client Email:</string>
    <string name="new_appointment">New Appointment</string>
    <string name="please_select_available_time">Please select available time:</string>
    <string name="not_exists">This email is not exists</string>
    <string name="allow_location">Allow location</string>
    <string name="you_ll_need_to_enable_your_location_in_order_to_user_findmybarber">You\'ll need to enable your location in order to use FindMyBarber</string>
    <string name="enable_location">Enable location</string>
    <string name="it_appears_like_this_barber_shop_is_not_on_our_service_would_you_like_to_call_them_to_book_an_appointment">It appears like this barber shop is not on our service, would you like to call them to book an appointment?</string>
    <string name="houston_we_have_a_problem">Houston we have a problem...</string>
    <string name="cancel">cancel</string>
    <string name="call_now">Call Now</string>
    <string name="bookagain">Book Again</string>
    <string name="another_date">Another date?</string>
    <string name="BookNow">BOOK NOW</string>
    <string name="add_store">Add store to Find My Barber</string>
    <string name="store_name">Store name</string>
    <string name="Address">Address</string>
    <string name="rank">Rank</string>
    <string name="description">Description</string>
    <string name="bt_add_store">Add Store</string>
    <string name="edit_profile">Edit Your Profile</string>
    <string name="bt_edit_profile">Edit</string>
    <string name="my_profile">My Profile</string>
    <string name="app_description">FindMyBarber is an application that have been developed to help hairdressers perform time management perfectly and make the booking appointment experience perfect for their customers</string>
    <string name="contact_group">Lior Shor, Idan Pollak</string>
    <string name="illegal_store_name">illegal store name</string>
    <string name="illegal_address">illegal address</string>
    <string name="illegal_description">illegal description</string>
    <string name="welcome_to_findmybarber">Welcome to FindMyBarber</string>
    <string name="enable_calendar_permissions">Enable calendar permissions</string>
    <string name="you_ll_need_to_allow_us_to_use_your_calendar_in_order_to_use_findmybarber">You\'ll need to allow us to use your calendar in order to use FindMyBarber</string>
    <string name="allow_calendar">Allow Calendar</string>
    <string name="enable_phone_calls">Enable Phone Calls</string>
    <string name="you_ll_need_to_allow_us_to_use_your_phone_in_order_to_use_findmybarber">You\'ll need to allow us to use your phone in order to use FindMyBarber</string>
    <string name="findmybarber">FindMyBarber</string>
    <string name="upcoming_meetings">Upcoming meetings:</string>
    <string name="previous_meetings">Previous meetings:</string>

</resources>