<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calendar_screen">

    <Button
        android:id="@+id/allowLocation"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_finish_style"
        android:onClick="popUpAllowCalendar"
        android:text="@string/allow_calendar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <TextView
        android:id="@+id/enableLocationTitle"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/enable_calendar_permissions"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/you_ll_need_to_allow_us_to_use_your_calendar_in_order_to_use_findmybarber"

        app:layout_constraintBottom_toTopOf="@+id/allowLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

</androidx.constraintlayout.widget.ConstraintLayout>