<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    app:layout_constraintCircleRadius="45dp"
    tools:context=".view.fragments.AdminManagement">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/card_style"
        app:cardCornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_style"
                android:contentDescription="@string/close"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/meetingWith"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <Button
                android:id="@+id/saveChanges"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:background="@drawable/bt_finish_style"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.915" />

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="240dp"
                android:layout_height="34dp"
                android:autofillHints="Time"
                android:background="@drawable/textview_corner_style"
                android:ems="10"
                android:hint="@string/time"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toEndOf="@+id/timetxtvw"
                app:layout_constraintTop_toBottomOf="@+id/dateEditText"
                app:layout_constraintVertical_bias="0.03"
                android:inputType="time" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="240dp"
                android:layout_height="34dp"
                android:autofillHints="Email"
                android:background="@drawable/textview_corner_style"
                android:ems="10"
                android:hint="@string/date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.206"
                app:layout_constraintStart_toEndOf="@+id/datetxtvw"
                app:layout_constraintTop_toBottomOf="@+id/meetingWith"
                app:layout_constraintVertical_bias="0.118"
                android:inputType="date" />

            <TextView
                android:id="@+id/datetxtvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/datestring"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meetingWith" />

            <TextView
                android:id="@+id/timetxtvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datetxtvw"
                app:layout_constraintVertical_bias="0.07" />

            <TextView
                android:id="@+id/orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_below_to_change_the_date_and_time_for_the_meeting"
                app:layout_constraintBottom_toTopOf="@+id/datetxtvw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meetingWith"
                app:layout_constraintVertical_bias="0.01" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="228dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeEditText" />

            <TextView
                android:id="@+id/moredetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/contact_details"

                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.231"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <TextView
                android:id="@+id/phonenumbertxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="88dp"
                android:text="@string/phone_number_title"
                app:layout_constraintBottom_toTopOf="@+id/saveChanges"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNametxt"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/contactNametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/contact_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moredetails" />

            <TextView
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/contactNametxt"
                app:layout_constraintTop_toBottomOf="@+id/moredetails" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toEndOf="@+id/phonenumbertxt"
                app:layout_constraintTop_toBottomOf="@+id/contactName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>