<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"

        app:layout_constraintCircleRadius="45dp"
        tools:context=".view.fragments.AdminManagement">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="160dp"
        app:cardElevation="8dp"
        android:background="@drawable/card_style"
        app:cardCornerRadius="45dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/new_appointment"
                app:layout_constraintBottom_toTopOf="@+id/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/please_enter_client_email"
                app:layout_constraintBottom_toTopOf="@+id/emailEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_select_available_time"
                app:layout_constraintBottom_toTopOf="@+id/gridview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="1.0">

            </TextView>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/datestring"
                app:layout_constraintBottom_toTopOf="@+id/order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_email"
                app:layout_constraintVertical_bias="0.479">

            </TextView>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="240dp"
                android:layout_height="34dp"
                android:layout_marginTop="92dp"
                android:autofillHints="Email"
                android:background="@drawable/textview_corner_style"
                android:ems="10"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="textEmailAddress" />

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="4"
                android:scrollbars="horizontal"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"
                app:layout_constraintBottom_toTopOf="@+id/bookNow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">
            </GridView>

            <Button
                android:id="@+id/bookNow"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bt_finish_style"
                android:text="@string/book_now"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>